Collect some words & sensences in English version html files. by Zawadi-san

--- a/en/ADD.html
+++ b/en/ADD.html
@@ -19,7 +19,7 @@ How many bowling pins are there in total?
 10 pins.<br>
 What will happen if it increases by 1 column?<br>
 Using the up/left/right cursor keys, recycles a program!<br>
-Type "+5" by addition, and ENTER key.
+Type "+5" by addition, and press ENTER key.
 <div id="add1-5"></div><script>make15("add1-5", "?1+2+3+4+5")</script>
 How is the result when adding 1 to 10 like this?
 Adding from 1 to 10 at this pace, how much is the answer?
@@ -27,7 +27,7 @@ Adding from 1 to 10 at this pace, how much is the answer?
 </section>
 
 <section>
-From 1 to 100, it seems like tough.<br>
+What if is adding from 1 to 100, it seems like tough!?<br>
 So, the repeating command "FOR".
 <div id="add1-7"></div><script>make15("add1-7", "FOR I=1 TO 100:?I:NEXT")</script>
 Prepare the variable "A", and let's get added more and more.
@@ -44,11 +44,11 @@ OK
 
 <section>
 <b>Try it!</b><br>
-1. How many result is adding from 1 to 12?<br>
-2. How many result is adding from 1 to 20?<br>
-3. How many result is adding from 1 to 200?<br>
-4. How many result is adding from 1 to 300?<br>
-5. How is the limit of number that can calculate properly?<br>
+1. What is  the result by adding from 1 to 12?<br>
+2. What is  the result by adding from 1 to 20?<br>
+3. What is  the result by adding from 1 to 200?<br>
+4. What is  the result by adding from 1 to 300?<br>
+5. What is the limit of number that can calculate properly?<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
