--- a/en/FOR.html
+++ b/en/FOR.html
@@ -32,27 +32,27 @@ Add a number and loop!
 17 FOR J=1 TO B
 30 NEXT
 */}))</script>
-You can calculate the multiplication!
+You can do the multiplication!
 </section>
 
 <section>
-Count variable C that number of '*' marks.
+Count variable C that counts number of '*' marks.
 <div id="step-4"></div>
 <script>make15("step-4", f2s(function() {/*
 16 C=0
 25 C=C+A
 40 ?C
 */}))</script>
-C=C+A cause you can get A x '*' marks every loops. LET C,C+1 is OK also. If you don't C=0 or LET C,0, C increse every executions continuously.
+C=C+A cause you can get A x '*' marks every loops. Using LET C,C+1 is OK also. If you don't input C=0 or LET C,0, then C will increase in every executions continuously.
 </section>
 
 <section>
 <b>Let's try</b><br>
-1. Calculate 7 multiplications 8<br>
-2. Calculate 8 multiplications 7<br>
-3. Change the mark that you like<br>
+1. Calculate 7 multiply by 8<br>
+2. Calculate 8 multiply by 7<br>
+3. Change to the mark that you like<br>
 4. Check to change the mark to 2 letters<br>
-5. Check to input zero<br>
+5. Check if input zero<br>
 </section>
 
 <div id="credit"><a href=https://github.com/IchigoJam/print>CC BY on GitHub</a> <a href="https://ichigojam.github.io/print/en/">IchigoJam print</a> https://ichigojam.github.io/print/en/ <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
