--- a/en/GACHA.html
+++ b/en/GACHA.html
@@ -13,7 +13,7 @@ Let's complete the alphabet with gacha!
 10 A=RND(26)
 20 ?"DRAW:";CHR$(ASC("A")+A)
 */}))</script>
-The alphabet is 26 kinds from A to Z. Using "RND" to play gacha!
+The 26 alphabets from A to Z are used to play gacha!. Use "RND" to play.
 </section>
 
 <section>
@@ -49,7 +49,7 @@ Let's make "A" to be rare.
 <script>make15("gacha-4", f2s(function() {/*
 15 IF A=0 IF RND(10)>0 A=1
 */}))</script>
-Make it to be a probability of becoming "B" 9/10 even if "A" comes out.
+Make a probability of it becoming "B" be 9/10 even if "A" comes out.
 </section>
 
 <section>
@@ -58,7 +58,7 @@ Make it to be a probability of becoming "B" 9/10 even if "A" comes out.
 2. Let's make it to be rare from "A" to "F"<br>
 3. Let's make sure that "Z" does not come out<br>
 4. Let's come out "Z" by a probability of 1/2<br>
-5. Let's make it to not become same<br>
+5. Let's make it to not go onto each other (not become same)<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
