--- a/en/JANKEN.html
+++ b/en/JANKEN.html
@@ -4,15 +4,15 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Janken Game</h1>
+<h1>Hand Game (Janken)</h1>
 
 <section>
-Janken is Japanese fighting hand game using three hand signs.<br>
+Janken famously known as Rock Paper Scissor often used as a fair choosing method is a hand game using three hand signs.<br>
 - Gu: (rock) simply ball your hand up into a fist. (Gu wins Choki)<br>
 - Choki: (scissors) use two fingers to mimic the shape. (Choki wins Pa)<br>
 - Pa: (paper) extend your hand palm down.. (Pa wins Gu)<br>
 <br>
-Use randam command with number 3 if you want to decide Gu, Choki or Pa by your computer.
+Use random command with number 3 if you want to decide Gu, Choki or Pa by your computer.
 <div id="list1"></div><script>make15("list1", "?RND(3)")</script>
 For instance 0 means Gu, 1 means Choki, 2 means Pa.
 </section>
