--- a/en/JINKOSIM.html
+++ b/en/JINKOSIM.html
@@ -8,13 +8,13 @@
 
 <section>
 The Japanese population is 125.13 million. It decreased by 270,000 in one year.<br>
-(2016.11 Ministry of Internal Affairs and Communications, Statistics Bureau, Population Estimate)
+(Nov, 2016 Ministry of Internal Affairs and Communications, Statistics Bureau, Population Estimate)
 <div id="jinko-1"></div>
 <script>make15("jinko-1", f2s(function() {/*
 10 P=12536
 20 D=27
 */}))</script>
-Set the population to a "P", and the reducing number as a unit ten thousand to "D".<br>
+Set the population as "P", the reducing number as "D" and let the unit for both be ten thousand.<br>
 </section>
 
 <section>
