--- a/en/LED.html
+++ b/en/LED.html
@@ -8,7 +8,7 @@
 
 <section>
 <img src=key-enter.png height=70 align=right>
-Turn on the switch of your IchigoJam. Type "LED1" from your keyboard. And press the ENTER key. (ENTER key is located on the right side and big key)
+Turn on the switch of your IchigoJam. Type "LED1" from your keyboard. And press ENTER key. (ENTER key is located on the right side and big key)
 <div id="list1"></div><script>make15("list1", "LED1")</script>
 It is a success if your LED of IchigoJam lighted up and you got "OK" message.
 </section>
@@ -20,27 +20,27 @@ Type "LED0" to light off.
 
 <section>
 <img src=key-space.png height=24 align=right>
-SPACE key is big and located center and bottom of your keyboard.<br>
-Type "LED 1" and the hit the ENTER key.
+SPACE key is big and located center and bottom of the keyboard.<br>
+Type "LED 1" and the press ENTER key.
 <div id="list3"></div><script>make15("list3", "LED 1")</script>
 It is OK either way, whether the space is there or not. 
 </section>
 
 <section>
-Let's type "RED0" and hit the ENTER.
+Let's type "RED0" and press ENTER key.
 <div id="red-1"></div><script>make15("red-1", "RED0")</script>
-The LED does not light off with a message "Syntax error".<br>
-Don't worry! The computer naver get angry.
+The LED will not light off. You will get a message "Syntax error".<br>
+Don't worry about making mistakes repeatedly! The computer never gets angry.
 </section>
 
 <section>
-Let's type "ABD" without hitting the ENTER.<br>
+Let's type "ABD" without pressing ENTER key.<br>
 <div id="red-2"></div><script>make15("red-2", "ABD\x85")</script>
 <img src=key-backspace.png height=40 align=right>
-Once hit the Backspace key.<br>
+Once press the Backspace key.<br>
 The Backspace key located at right and upper side.
 <div id="red-3"></div><script>make15("red-3", "AB\x85")</script>
-You can delete the character! You don't worry about miss typing.
+You can delete the character! Therefore don't worry about miss typing.
 </section>
 
 <section>
@@ -48,8 +48,8 @@ You can delete the character! You don't worry about miss typing.
 1. Type "ABCDEFG"<br>
 2. Try to light off the LED<br>
 3. Try to light up and light off rapidly<br>
-4. Type "BEEP" and hit the ENTER<br>
-5. Type "CLS" and hit the ENTER<br>
+4. Type "BEEP" and press ENTER key<br>
+5. Type "CLS" and press ENTER key<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
