--- a/en/LET.html
+++ b/en/LET.html
@@ -13,13 +13,13 @@ If it displays "OK", memorizing is completed!
 </section>
 
 <section>
-Turn off the screen, and A? B? C?
+Clear the screen, and check if memorized A? B? C?
 <div id="list2"></div><script>make15("list2", "CLS\n?A\n?B\n?C")</script>
 It uses "LET" once again, overwrite the memory.
 <div id="list3"></div><script>make15("list3", "LET B,2017\n?B")</script>
 It can use also variables instead of numbers.
 <div id="list3-2"></div><script>make15("list3-2", "LET C,A+B\n?C\nLET C,C+1\n?C")</script>
-"="(Equal) symbol can be used to write short ,too.
+"="(Equal) symbol can be used to write in short form.
 <div id="list3-3"></div><script>make15("list3-3", "C=C+1")</script>
 </section>
 
@@ -32,9 +32,9 @@ A sound that gradually lower!
 <b>Try it!</b><br>
 1. Let's make a sound that is getting more lower<br>
 2. Let's make a sound that get gradually higher<br>
-3. Let it memorize the born year, month, day, and store a number that added all<br>
-4. Let's memorize and display the number multiplied by the born month and day<br>
-5. Let's try how many digits can be memorized as far as<br>
+3. Let it memorize the birth year, month, day, and store a number that added all<br>
+4. Let's memorize and display the number multiplying the birth month and day<br>
+5. Let's try how many digits can be memorized as many as possible.<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
