--- a/en/LOCATE.html
+++ b/en/LOCATE.html
@@ -11,36 +11,36 @@ Let's display at specified place!<br>
 Use "LOCATE" to specify place.
 <div id="list1"></div><script>make15("list1", "LOCATE 16,12:PRINT \"*\"")</script>
 Press ENTER key, '*' will be displayed around the center.<br>
-It means that display on 16 from the left end, on 12 from the top end.
+It means that '*' will display on 16 spaces from the left end, and 12 spaces from the top end.
 </section>
 
 <section>
-Let's display at different place.
+Let's display at a different place.
 <div id="list2"></div><script>make15("list2", "LOCATE 25,5:PRINT \"*\"")</script>
 Change the numbers in the "LOCATE", the place to be  displayed will change.
 </section>
 
 <section>
-Actually, it can also enter "LC" by abbreviating "LOCATE".
+Actually, you can also use "LC" as an abbreviation of "LOCATE".
 <div id="list3"></div><script>make15("list3", "LC 16,14:PRINT \"*\"")</script>
 </section>
 
 <section>
-Also characters can be displayed on the two places.
+Also characters can be displayed on two different places.
 <div id="red-1"></div><script>make15("red-1", "LC 16,12:PRINT \"@\":LC 10,10:PRINT \"*\"")</script
 </section>
 
 <section>
 Also the calculated answer can be displayed.
 <div id="red-2"></div><script>make15("red-2", "LC 16,14:PRINT 2+3")</script>
-When it want to clear for monitor, Press F1 key or "CLS".
+When you want to clear for monitor, Press F1 key or "CLS".
 <div id="red-3"></div><script>make15("red-3", "CLS")</script>
 </section>
 
 <section>
 <b>Try it!</b><br>
 1. Display a "IchigoJam" on 20 from the left end and  on 10 from the top end<br>
-2. Display a '@' on 10 from the left end, on 17 from the top end, and on 25 from the left end, on 18 from the top end<br>
+2. Display a '@' at two different places that is, on 10 from the left end, on 17 from the top end, and on 25 from the left end, on 18 from the top end<br>
 3. Display a result of "10-5" on 15 from the left end and 24 from the top end<br>
 4. Display a favorite character at favorite place<br>
 5. Display a favorite calculation result at favorite place<br>
