--- a/en/LRUN.html
+++ b/en/LRUN.html
@@ -8,8 +8,8 @@
 <h1>Connect the programs / LRUN - IchigoJam</h1>
 
 <section>
-IchigoJam can store up to four.<br>
-Connect programs each other, to be a masterpiece!<br>
+IchigoJam can store up to four programs.<br>
+Connect one program to  another, to be a masterpiece!<br>
 First, make a quiz game, the main part of the game.
 <div id="step-1"></div>
 <script>make15("step-1", f2s(function() {/*
@@ -17,7 +17,7 @@ First, make a quiz game, the main part of the game.
 20 LC10,10:INPUT "1+1=?",N
 30 LC12,10:IF N=2 ?"CLEAR!!" ELSE ?"GAME OVER!"
 */}))</script>
-It clears with correct answer! If not it will be game over.<br>
+It displays "clear" with correct answer input! If not, it will display game over!.<br>
 Save this in file 1.
 <div id="step-2"></div>
 <script>make15("step-2", f2s(function() {/*
@@ -26,12 +26,12 @@ SAVE1
 </section>
 
 <section>
-To create a title program, first of all from beginning.
+To create a  program title, first of all from beginning.
 <div id="step-3"></div>
 <script>make15("step-3", f2s(function() {/*
 NEW
 */}))</script>
-A title program that ends when any key is pressed.
+A program title that ends when any key is pressed.
 <div id="step-4"></div>
 <script>make15("step-4", f2s(function() {/*
 10 CLS
