--- a/en/MATH1.html
+++ b/en/MATH1.html
@@ -20,7 +20,7 @@ With "FOR"/"NEXT" command, while incrementing a variable X by 1, repeat until it
 </section>
 
 <section>
-Let's display only the multiples of 3 using the symbol "%" what calculating the remainder.
+Let's display only the multiples of 3 using the symbol "%" which calculates the remainder.
 <div id="step-2"></div>
 <script>make15("step-2", f2s(function() {/*
 20 IF X%3=0 ?X
@@ -51,7 +51,7 @@ Let's display "common multiples" of 2 and 3 and 5
 <script>make15("step-5", f2s(function() {/*
 20 IF X%2=0 AND X%3=0 AND X%5=0 ?X
 */}))</script>
-There are 3 "common multiples" and 30 "least common multiple" between 100.
+There are 3 "common multiples", and 30 is the "least common multiple" between 1 and 100.
 </section>
 
 <section>
