--- a/en/MATH2.html
+++ b/en/MATH2.html
@@ -16,8 +16,8 @@ What number is divisible by 182?
 30 IF N%X=0 ?X
 40 NEXT
 */}))</script>
-With "FOR" / "NEXT" command, whie incrementing a variable X by 1 from 2, and repeat.<br>
-It is OK that "N=182" set as "LET N, 182"!
+With "FOR" / "NEXT" command, while incrementing a variable X by 1 from 2, and repeat.<br>
+It is OK that "N=182" be also written as "LET N, 182"!
 </section>
 
 <section>
@@ -55,12 +55,12 @@ The largest number 91 is the "greatest common divisor" of 182 and 455.
 
 <section>
 <b>Try it!</b><br>
-1. Let's display the "common divisor" of 3432 and 2002<br>
-2. Let's divide 3432 by "greatest common divisor"<br>
-3. Let's multiply the number calculated above 2 with "greatest common divisor"<br>
-4. Let's count how many "divisors" of 2002<br>
-5. Let's look for the "prime number" that does not have "divisor" in 4 digit number<br>
-6. Let's confirm that there is no "common divisor" between "prime number"<br>
+1. Let's display the "common divisor" of 3432 and 2002.<br>
+2. Let's divide 3432 by "greatest common divisor" from (1).<br>
+3. Let's multiply the number calculated above (2) with "greatest common divisor".<br>
+4. Let's count how many "divisors" of 2002.<br>
+5. Let's look for the "prime numbers" that do not have "divisor" in a 4 digit number.<br>
+6. Let's confirm that there is no "common divisor" between "prime numbers" from (5).<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
