--- a/en/MATH3.html
+++ b/en/MATH3.html
@@ -9,8 +9,8 @@
 
 <section>
 Let's round down!<br>
-41 is 40. 44 is 40. 45 is also 40. 49 is 40.<br>
-It says to round down the ones place.
+41 is 40, 44 is 40, 45 is also 40, 49 is 40.<br>
+It is called round down the ones place.
 <div id="step-1"></div>
 <script>make15("step-1", f2s(function() {/*
 ?44/10
@@ -27,8 +27,8 @@ Divide by 10, and multiply by 10, completed to round down!
 
 <section>
 Let's round it up!<br>
-49 is 50. 45 is 50. 44, 41 is also 50. 40 is 40.<br>
-It says to round up the ones place.
+49 is 50, 45 is 50, 44 & 41 is also 50, 40 is 40.<br>
+It is called round up the ones place.
 <div id="step-3"></div>
 <script>make15("step-3", f2s(function() {/*
 ?44/10*10+10
@@ -58,10 +58,10 @@ If the ones place is 0, it rounds down, and if it is 1 or more it rounds up.
 
 <section>
 <b>Try it!</b><br>
-1. Let's round up the ones place of 72 by the program<br>
-2. Let's make a "rounding off" program that rounds down if it is 4 or less in the ones place, rounds up if it is 5 or more<br>
-3. Let's confirm that it can round up the ones place even at "?(N+9)/10*10"<br>
-4. Let's make the program for rounding off to the ones place<br>
+1. Let's round up the ones place of 72 by the program.<br>
+2. Let's make a "rounding off" program that rounds down the ones place if it is 4 or less and rounds up if it is 5 or more.<br>
+3. Let's confirm that it can round up the ones place even with "?(N+9)/10*10".<br>
+4. Let's make the program for rounding off to the ones place.<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
