--- a/en/NEKONIKOBAN.html
+++ b/en/NEKONIKOBAN.html
@@ -7,6 +7,7 @@
 <h1>Nekonikoban Game - IchigoJam</h1>
 
 <section>
+"Neko ni koban" meaning relates with "casting pearls before swine"(big waste of resources). "Neko"- "Cat", "Koban"-"Coin"
 A cat appears at the horizontal 10 and the vertical 5.(character code 236, ALT + C)
 <div id="neko-1"></div>
 <script>make15("neko-1", f2s(function() {/*
