--- a/en/NUMTYPE.html
+++ b/en/NUMTYPE.html
@@ -7,7 +7,7 @@
 <h1>Number Typing Game</h1>
 
 <section>
-Name typing game(type a your name at line 20!)
+Name typing game(type your name at line 20!)
 <div id="numtype-1"></div><script>make15("numtype-1", f2s(function() {/*
 10 CLS
 20 ?"TAISUKE FUKUNO"
@@ -26,7 +26,7 @@ Remodel to a ABC alphabet typing game!
 <div id="numtype-2"></div><script>make15("numtype-2", f2s(function() {/*
 10 FOR I=1 TO 10:?CHR$(65+RND(3));:NEXT
 */}))</script>
-Can you cut off 20 seconds?
+Can you cut off at 20 seconds?
 </section>
 
 <section>
@@ -42,7 +42,7 @@ How can a score be displayed up to first decimal place?
 <div id="numtype-4"></div><script>make15("numtype-4", f2s(function() {/*
 T=TICK():?T/60;".";T%60/6
 */}))</script>
-Per comma 1 second unit, compete!
+Per 0.1 second, compete!
 </section>
 
 <section>
