--- a/en/PRINT.html
+++ b/en/PRINT.html
@@ -10,38 +10,38 @@
 Let's give a question to a computer that is good at calculating<br>
 Use "PRINT" to display the specified one.
 <div id="print1-1"></div><script>make15("print1-1", "PRINT 1+1")</script>
-Press ENTER key, answer 「2」 quickly.
+Press ENTER key, immediately can get an answer 「2」.
 <div id="print1-2"></div><script>make15("print1-2", "PRINT 15-7")</script>
 Also possible to substract.!
 </section>
 
 <section>
-At the computer, a multiplication symbol represents by asterisk '*'.
+In the computer, a multiplication symbol is represented by asterisk '*'.
 <div id="print1-3"></div><script>make15("print1-3", "PRINT 3*5")</script>
 A division is slash '/'. (numerator:left ,denominator:right)
 <div id="print1-4"></div><script>make15("print1-4", "PRINT 10/2")</script>
-Actually, instead of "PRINT" can use a '?'.
+Actually, instead of "PRINT" can use '?'.
 <div id="print1-5"></div><script>make15("print1-5", "?10/3")</script>
-Oh? Is wrong the result?<br>
+Oh? Is the result wrong?<br>
 It is right answer at the "IchigoJam" which does not use decimals.<br>
 The remainder calculates by the '%'.
 <div id="print1-6"></div><script>make15("print1-6", "?10%3")</script>
-Because 10 divided by 3 is 3 and remainder 1, '1' is displayed.</section>
+Because 10 divided by 3 is 3 and remainder is 1, '1' is displayed.</section>
 
 <section>
 Finally, let's calculate big number.
 <div id="print1-7"></div><script>make15("print1-7", "?1000*100")</script>
-Oh, a state is strange.<br>
+Oh, the answer is strange!.<br>
 Actually,the range that IchigoJam can calculate is determined from -32768 to 32767.
 </section>
 
 <section>
 <b>Try it!</b><br>
-1. Let's make a calculate "100 + 200" to IchigoJam<br>
-2. Let's make a calculate "8 * 7" to IchigoJam<br>
-3. Let's make a calculate "100 / 25" to IchigoJam<br>
-4. Let's make a calculate the remainder of "30/8" to IchigoJam<br>
-5. Let's make a calculate the 100,000,000 (10,000 * 10,000) to IchigoJam<br>
+1. Let's make a calculation "100 + 200" in IchigoJam<br>
+2. Let's make a calculation "8 * 7" in IchigoJam<br>
+3. Let's make a calculation "100 / 25" in IchigoJam<br>
+4. Let's calculate the remainder of "30/8" with IchigoJam<br>
+5. Let's calculate 100,000,000 (10,000 * 10,000) with IchigoJam<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
