--- a/en/RUN-LIST.html
+++ b/en/RUN-LIST.html
@@ -7,43 +7,43 @@
 <h1>Memory of program / RUN/LIST</h1>
 
 <section>
-Let's to memorize a blinking pattern of LED.
+Let's memorize a blinking pattern of LED.
 <div id="run-1"></div><script>make15("run-1", "10 LED1:WAIT10")</script>
 Starting with a number is a command meaning "to memorize".<br>
-The LED does not light yet.<br>
-A command to run is "RUN" and ENTER key, the LED will light up.
+But the LED does not light.<br>
+A command to execute the program is "RUN" and ENTER key, the LED will light up.
 <div id="run-2"></div><script>make15("run-2", "RUN")</script>
-Next starts with 20, and add a memory with the ENTER key.
+Next starts with 20, and add a memory with ENTER key.
 <div id="run-4"></div><script>make15("run-4", "20 LED0:WAIT10")</script>
-Use the "RUN" when it runs a memorized program.<br>
+Use "RUN" to run a memorized program.<br>
 Light again with "RUN"!
 </section>
 
 <section>
-Call a memory, "LIST".
+Call a memory with "LIST".
 <div id="run-3"></div><script>make15("run-3", "LIST\n10 LED1:WAIT10\n20 LED0:WAIT10")</script>
-Inserting "WAIT" between 10 and 20 lines.
+Inserting "WAIT" between line 10 and line 20.
 <div id="run-5"></div><script>make15("run-5", "15 WAIT50")</script>
-Comfirm with "LIST", execute with "RUN"!
+Confirm with "LIST", execute with "RUN"!
 </section>
 
 <section>
 Programs with the same number will be overwritten.<br>
-(Comfirm with "RUN" and "LIST"!)
+(Confirm with "LIST"!)
 <div id="run-6"></div><script>make15("run-6", "15 WAIT110")</script>
 </section>
 
 <section>
-Type only number and press the ENTER key, it  disappears that line.
+Type only number and press the ENTER key, it deletes the respective line.
 <div id="run-7"></div><script>make15("run-7", "15\nLIST")</script>
 </section>
 
 <section>
 <b>Try it!</b><br>
-1. Use a function key F5 key instead of "RUN"<br>
-2. Use a F4 key instead of "LIST"<br>
+1. Use a function key F5 instead of "RUN" command<br>
+2. Use F4 key instead of "LIST"<br>
 3. Let's make a program that the LED lights 2 times<br>
-4. Let's make a program that lighting the LED with cool pattern
+4. Let's make a program that lights the LED with cool pattern
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
