--- a/en/SAVE-LOAD-NEW.html
+++ b/en/SAVE-LOAD-NEW.html
@@ -14,32 +14,32 @@ IchigoJam can save 4 programs.(0～3)
 </section>
 
 <section>
-Let's turns off the power and load the program with "LOAD".
+Let's turn off the power and load the program with "LOAD".
 <div id="save-3"></div><script>make15("save-3", "LOAD0\nLoaded 30byte\nOK")</script>
 Confirm with "LIST"! Execute with "RUN"!
 </section>
 
 <section>
-"FILES" that confirms the saved program.
+To confirm the saved program, use "FILES".
 <div id="save-5"></div><script>make15("save-5", "FILES")</script>
 Be careful not to erase your favorite program by mistake.
 </section>
 
 <section>
-"NEW" when creating a new program.
+To create a new program, use "NEW".
 <div id="save-6"></div><script>make15("save-6", "NEW\nOK\nLIST\nOK")</script>
-Type "LIST", nothing will be displayed.
+If you type "LIST", nothing will be displayed.
 </section>
 
 <section>
-The program saved at No. 0 starts automatically when you turn on the power switch while holding down the button on the board.<br>
-(It's okay without a keyboard or TV. For electronic work etc.)
+The program saved at No. 0 starts automatically when you turn on the power switch while holding down the button on the IchigoJam.<br>
+(Even if IchigoJam is disconnected from keyboard or screen, it can be used for electronic operations etc.)
 </section>
 
 <section>
 <b>Try it!</b><br>
-1. Let's save the program that lighting 3 times<br>
-2. Let's use automatically start<br>
+1. Let's save the program that lights 3 times<br>
+2. Let's do automatically start<br>
 3. Check what happens when use "SAVE" after "NEW"<br>
 </section>
 
