--- a/en/TOUCHTYPING.html
+++ b/en/TOUCHTYPING.html
@@ -19,12 +19,12 @@ Touch typing to hit without looking at the keyboard is fast! fun! cool!<br>
 70 NEXT:?TICK()/60
 */}))</script>
 Position the index finger of the right hand at "J" position, middle finger at "K", ring finger at "L".<br>
-Type quickly J, K or L that displays ramdomly.<br>
+Type quickly J, K or L that displays randomly.<br>
 Can you hit 10 times without mistakes? The target time is 8 seconds!
 </section>
 
 <section>
-After you cleared it, let's add the characters gradually.<br>
+After you cleared it, let's add the alphabet characters gradually.<br>
 Position the index finger of the left hand at "F".<br>
 Can you give out 8-second record with "FJKL"?
 <div id="touchtype2"></div>
@@ -47,8 +47,8 @@ This is the home position of the touch typing!
 1. Let's give out 8-second record with "ASDFJKL"<br>
 2. Let's add "H" that press with the index finger of the right hand<br>
 3. Let's add "G" that press with the index finger of the left hand<br>
-4. Let's add "ZXCVBNM" that at bottom of keyboard<br>
-5. Let's add "QWERTYUIOP" that at top of keyboard<br>
+4. Let's add "ZXCVBNM" located at bottom of keyboard<br>
+5. Let's add "QWERTYUIOP" located at top of keyboard<br>
 6. Let's give out 8-second record with all alphabet
 </section>
 
