--- a/en/BIN.html
+++ b/en/BIN.html
@@ -6,14 +6,14 @@
 <h1>Make a binary number / BIN$</h1>
 
 <section>
-There are numbers, hiragana, alphabet, various characters, but the character using by the computer is only two "0" and "1".
+There are numbers, syllables, alphabet, various characters, but the character used by the computer is only two "0" and "1".
 </p><p>
-Usually, if you add 1 in 9, it will be 10 and 2 characters, but because 0 and 1 only, only adding 1 in 1, will be 10 and 2 characters.
+Usually, if you add 1 in 9, it will be 10 and 2 characters, but because there is only 0 and 1, only 1 will be added to 1, so it will be 10 (one zero) and 2 characters.
 This is a binary number.
 </p><p>
 "BIN$" command that change the number to binary number.<br>
 <div id="bin1-1"></div><script>make15("bin1-1", "?BIN$(2)\n10 \n?BIN$(10)\n1010 ")</script>
-The symbol "` "(shift + "@" or left of "1") that make a binary number to a number.<br>
+The symbol "` "(shift + "@" or left of "1") converts a binary number to a number.<br>
 <div id="bin1-2"></div><script>make15("bin1-2", "?`1111\n15 \n?`100000000\n256 ")</script>
 </section>
 
