--- a/en/IF.html
+++ b/en/IF.html
@@ -7,11 +7,10 @@
 <h1>Let it judge / IF</h1>
 
 <section>
-Avoid if balls flew to you. Jump if there are holes.<br>
 "IF" is a command to let the computer judge.<br>
 <div id="if-1"></div><script>make15("if-1", "10 IF BTN()=0 GOTO 10\nRUN")</script>
-If the button were not pushed, repeated line 10.<br>
-Push button, the program goes to next, and finish.
+If the button is not pressed, line 10 repeats.<br>
+Upon pressing the button, the program goes to next, and finish.
 </section>
 
 <section>
@@ -28,7 +27,7 @@ Since the computer is fast, pressing the button will light the LED and go to the
 </section>
 
 <section>
-To not go to next judgement immediately, add a "WAIT".
+To not go to next judgement immediately, add "WAIT".
 <div id="if-3"></div><script>make15("if-3", f2s(function() {/*
 10 IF BTN()=0 GOTO 10
 20 LED1:WAIT30
@@ -45,7 +44,7 @@ To not go to next judgement immediately, add a "WAIT".
 3. Try to change "WAIT30" to "WAIT5"<br>
 4. Try to change "IF BTN()=1"<br>
 5. Make a program that pressing the button starts to blink the LED<br>
-6. Make a program that operates the LED happily<br>
+6. Make a program that operates the LED enjoyable<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
