--- a/en/PLAY.html
+++ b/en/PLAY.html
@@ -7,34 +7,34 @@
 <h1>Compose Music / PLAY - IchigoJam</h1>
 
 <section>
-The legs of a sounder put in SOUND(SND) and GND of your IchigoJam.
+Ensure the legs of a sounder are inserted in SOUND(SND) and GND of your IchigoJam.
 <div id="play1-1"></div><script>make15("play1-1", "PLAY\"CDE\"")</script>
 Did you hear the sounds Do-re-mi?
 </section>
 
 <section>
-Do-re-mi-fa-so-la-ti are CDEFGAB
+Do-re-mi-fa-so-la-ti tones are represented by CDEFGAB
 <div id="play1-2"></div><script>make15("play1-2", "PLAY\"CDEFGAB\"")</script>
-The octave (=height of soound) can be changed by the "O" and the number.
+The octave (=pitch of sound) can be changed by the alphabet "O" followed by a number.
 <div id="play1-3"></div><script>make15("play1-3", "PLAY\"O4 CDEFGAB O5 C\"")</script>
-You can change the length of tone the tone alphabet with the number.
+You can change the length of tone by putting a number.
 <div id="play1-4"></div><script>make15("play1-4", "PLAY\"CDE2\"")</script>
-"2" of "CDE2" means a two-part note. Default setting is quartet note. "8" means eighth note that tone length is a half of quartet note.<br>
-"#" to raise the tone a semitone, "-" to lower the tone a semitone.<br>
+"2" of "CDE2" means a half note. Default setting (without a number) is quarter note. Putting "8" means eighth note that its tone length is half of quarter note. "1" means whole note.<br>
+"#" (sharp) is to raise the tone by a semitone, "-" (minus) is to lower the tone by a semitone.<br>
 <div id="play1-5"></div><script>make15("play1-5", "PLAY\"C C# F-\"")</script>
-"R" means silence. You can change the length of tones using the nunmber sunch this "R2" alse.
+"R" means silence. You can change the length of tones' silence by putting number after R example "R2".
 <div id="play1-6"></div><script>make15("play1-6", "PLAY\"CRC\"")</script>
-"T" means to set up the tempo. Default setting "T120" means 120 quartet note per second.
+"T" means to set up the tempo. Default setting is "T120" means 120 quarter note per minute.
 <div id="play1-7"></div><script>make15("play1-7", "PLAY\"T240 CDE2 CDE2 GEDCDED2\"")</script>
 </section>
 
 <section>
 <b>Let's try!</b><br>
-1. Make a music "Tulip"<br>
+1. Make a music "Tulip" "Twinkle-Twinkle" "Old-MacDonald"<br>
 2. Type just "PLAY" during playing music<br>
 3. Make a music "Froggie Song"<br>
-4. Lat's play with your friends!<br>
-5. Let's compose music from your text of music!<br>
+4. Let's play together as orchestra with your friends!<br>
+5. Let's compose music from your text book of music!<br>
 </section>
 
 <div id="credit"><a href=https://github.com/IchigoJam/print>CC BY on GitHub</a> <a href="https://ichigojam.github.io/print/en/">IchigoJam print</a> https://ichigojam.github.io/print/en/ <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
