--- a/en/WHATDAY.html
+++ b/en/WHATDAY.html
@@ -7,9 +7,9 @@
 <h1>What day of the week were you born?</h1>
 
 <section>
-Year what month what day, what day of the week?<br>
+Input Year, month, date, and know what day of the week?<br>
 Actually, it can be calculated by program.<br>
-First, a program to display day of the week.
+First, a program to display days of the week.
 <div id="whatday0"></div><script>make15("whatday0", `10 LET[0],"SUN","MON","TUE","WED","THU","FRI","SAT"
 RUN
 ?STR$([0])`)</script>
@@ -22,17 +22,17 @@ Repeat from Sunday to Saturday with 7 days of the week.
 </section>
 
 <section>
-Using "INPUT", put the year in the "Y", the month in the "M" and the day in the "D".
+Using "INPUT", put the year in the "Y", the month in the "M" and the date in the "D".
 <div id="whatday1"></div><script>make15("whatday1", `20 INPUT"Y?",Y
 30 INPUT"M?",M
 40 INPUT"D?",D
 RUN`)</script>
-Let's display the inputed year and month and day.
+Let's display the fed data of year, month and date.
 <div id="whatday4"></div><script>make15("whatday4", `?Y,M,D`)</script>
 </section>
 
 <section>
-A "formula of Zeller" that calculating the day of the week from the year, month, day.<br>
+A "formula of Zeller" that calculates the day of the week from the year, month and date.<br>
 <div id="whatday2"></div><script>make15("whatday2", `50 IF M<3 M=M+12:Y=Y-1
 60 H=(Y+Y/4-Y/100+Y/400+(13*M+8)/5+D)%7
 70 ?STR$([H])`)</script>
@@ -42,10 +42,10 @@ It is amazing to be able to know the day of the week with this!
 
 <section>
 <b>Try it!</b><br>
-1. 今日の日付を入れて曜日を確認しよう<br>
+1. Put today's date and check what is the day today<br>
 2. What day of the week is my birthday?<br>
 3. What day of the week is the next birthday?<br>
-4. Let's display the days of the week with katakana<br>
+4. Let's display the days of the week with a different language<br>
 5. Let's make a birth month calendar<br>
 </section>
 
